--- a/orient_advances/templates/base.html
+++ b/orient_advances/templates/base.html
@@ -11,8 +11,10 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
         <link rel="icon" href="{% static 'orient_advances/dist/img/Favicon.ico' %}">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{% static "orient_advances/dist/css/styles.min.css" %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static "orient_advances/dist/css/style.css" %}">
+
     
     {% block title %}
     <title>Registration</title>
@@ -26,72 +28,39 @@
 </style>
     </head>
     <body>
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="{% url 'home' %}">Orient</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse col-md-8" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'advance' %}">Request Advance</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">Registration</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="forgitpassword.html">Reset Password</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="changepassword.html">Change Password</a>
-            </li>
-          </ul>
-        </div>
-      </nav> -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a class="navbar-brand" href="{% url 'home' %}"><img data-bs-hover-animate="pulse" src="{% static "orient_advances/dist/img/logo.png" %}" width="160" height="80"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
-        <div class="collapse navbar-collapse col-md-8" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="btn btn-secondary" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'profile' %}">Profile</a></li>
+              <li class="nav-item" role="presentation"><a class="btn btn-secondary active" href="{% url 'profile' %}">Profile</a></li>
             </li>
             <li class="nav-item">
-              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'logout' %}">Logout</a></li>
+              <li class="nav-item" role="presentation"><a class="btn btn-secondary active" href="{% url 'logout' %}">Logout</a></li>
             </li>
-            <li class="nav-item">
-              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'advance' %}">Request Advance</a></li>
+            <li class="nav-item dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Requests
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{% url 'advance' %}">Financial Advance</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'other' %}">Other expenses</a>
+              </div>
             </li>
-            {% else %}
-            <li class="nav-item">
-              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
-            </li>
-            {% endif %}
+              {% else %}
               <li class="nav-item">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'advance_about' %}">About</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
+              </li>
+              {% endif %}
+              <li class="nav-item">
+                <li class="nav-item" role="presentation"><a class="btn btn-secondary active" href="{% url 'advance_about' %}">About</a></li>
               </li>
           </ul>
         </div>
@@ -114,9 +83,9 @@
 {% block Footer %}
     
 {% endblock Footer %}
-    
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>            
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
